fix(VsTable): fix table td overflow-x css

--- a/packages/vlossom/src/components/vs-table/VsTable.scss
+++ b/packages/vlossom/src/components/vs-table/VsTable.scss
@@ -96,6 +96,7 @@ $tableBorder: var(--vs-table-border, 1px solid var(--vs-line-color));
                 font-size: var(--vs-table-fontSize, var(--vs-font-size));
                 font-weight: var(--vs-table-fontWeight, 400);
                 padding: 0.8rem 1.4rem;
+                overflow-x: auto;
 
                 &.vs-table-selectable-td {
                     padding: 0 1rem;
@@ -149,9 +150,7 @@ $tableBorder: var(--vs-table-border, 1px solid var(--vs-line-color));
                     border-left: 1px dotted var(--vs-line-color);
                     border-right: 1px dotted var(--vs-line-color);
                     font-size: var(--vs-font-size);
-                    box-shadow:
-                        inset 0 3px 8px rgba(100, 100, 100, 0.3),
-                        inset 0 -2px 4px rgba(50, 50, 50, 0.15);
+                    box-shadow: inset 0 3px 8px rgba(100, 100, 100, 0.3), inset 0 -2px 4px rgba(50, 50, 50, 0.15);
                 }
 
                 .vs-table-data {
@@ -159,7 +158,6 @@ $tableBorder: var(--vs-table-border, 1px solid var(--vs-line-color));
                     align-items: center;
                     width: 100%;
                     height: 100%;
-                    overflow-x: auto;
                 }
             }
         }
@@ -349,8 +347,6 @@ $tableBorder: var(--vs-table-border, 1px solid var(--vs-line-color));
 }
 .vs-dark {
     .vs-table .vs-table-wrap .vs-table-table .vs-table-tbody .vs-table-tr .vs-table-td.vs-table-expanded-row-content {
-        box-shadow:
-            inset 0 3px 6px rgba(255, 255, 255, 0.2),
-            inset 0 -2px 4px rgba(255, 255, 255, 0.15);
+        box-shadow: inset 0 3px 6px rgba(255, 255, 255, 0.2), inset 0 -2px 4px rgba(255, 255, 255, 0.15);
     }
 }
